gcp-runsix/istio-resource/cms-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cms
spec:
  hosts:
    - "cms.runsix.app"
  gateways:
    - istio.default.svc.cluster.local
  http:
    - name: "cms"
      route:
        - destination:
            host: cms.default.svc.cluster.local
