gcp-runsix/istio-resource/portal-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: portal
spec:
  hosts:
  -  runsix.app
  gateways:
  -  istio.default.svc.cluster.local
  http:
    - name: "portal"
      route:
        - destination:
            host: portal.default.svc.cluster.local
