gcp-runsix/istio-resource/rs-svc-authserver-vs-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rs-svc-authserver
spec:
  hosts: "api.runsix.app"
  gateways: istio.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/oauth"
    route:
    - destination:
        host: rs-svc-authserver.default.svc.cluster.local
        subset: v1
      weight: 100
    timeout: 15s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rs-svc-authserver
spec:
  host: rs-svc-authserver.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 5s
        tcpKeepalive:
          time: 7200s
          interval: 75s
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 7
      interval: 5m
      baseEjectionTime: 15m
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
