gcp-runsix/istio-resource/rs-svc-user-vs-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rs-svc-user
spec:
  hosts:
  -  api.runsix.app
  gateways:
  -  istio.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/user"
    route:
    - destination:
        host: rs-svc-user.default.svc.cluster.local
        subset: v1
      weight: 100
    timeout: 15s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
    corsPolicy:
      # 注意是allowOrigins，而不是allowOrigin，官方文档有错误
      allowOrigins:
        # ".*"表示匹配所有,这是特殊的正则表达式 https://github.com/google/re2/wiki/Syntax
        - regex: ".*"
      allowHeaders:
        - Authorization
        - Content-Type
        - Idempotence
      allowMethods:
        - POST
        - DELETE
        - PUT
        - GET
        - HEAD
        - OPTIONS
        - PATCH
      allowCredentials: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rs-svc-user
spec:
  host: rs-svc-user.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 5s
        tcpKeepalive:
          time: 7200s
          interval: 75s
      http:
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 7
      interval: 5m
      baseEjectionTime: 15m
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
